--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,22 +5,22 @@
   </head>
   <body>
 	<form action="/register" method="post">
-<!--     <div>
+    <div>
         <label>First Name:</label>
         <input type="text" name="firstname"/>
     </div>
     <div>
         <label>Last Name:</label>
         <input type="text" name="lastname"/>
-    </div> -->
+    </div>
     <div>
         <label>Username:</label>
         <input type="text" name="username"/>
     </div>
-<!--     <div>
+    <div>
         <label>Email:</label>
         <input type="text" name="email"/>
-    </div> -->
+    </div>
     
     <div>
         <label>Password:</label>
